configuraciones para android de NASolutions

--- a/OpenEdXMobile/res/values/colors.xml
+++ b/OpenEdXMobile/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="transparent_white_26">#42FFFFFF</color>
     <color name="transparent_white_20">#33FFFFFF</color>
     <color name="transparent_white_13">#21ffffff</color>
-    <color name="cyan_text_navigation_20">#20299ED7</color>
+    <color name="cyan_text_navigation_20">#6a7141</color>
     <color name="disabled_chapter_list">#EBEBED</color>
     <color name="grey_light">#3c4045</color>
     <color name="grey_medium">#666666</color>
@@ -44,34 +44,39 @@
     <color name="crop_circle_overlay_color">#c8000000</color>
 
     <color name="hint_grey_text">#8c8e90</color>
-    <color name="last_accessed_row_blue">#E5F5FC</color>
+    <color name="last_accessed_row_blue">#eaecdf</color>
 
     <!-- Toolbar colors -->
     <color name="toolbar_background_color">@color/white</color>
     <color name="toolbar_controls_color">@color/edx_brand_primary_base</color>
 
     <!--  Colors defined by edX Pattern Library at http://ux.edx.org/design_elements/colors/ -->
-    <color name="edx_brand_primary_dark">#065683</color>
-    <color name="edx_brand_primary_base">#0075B4</color>
-    <color name="edx_brand_primary_accent">#2991C3</color>
-    <color name="edx_brand_primary_back">#CCE3F0</color>
-    <color name="edx_brand_primary_x_back">#F2F8FB</color>
-    <color name="edx_brand_secondary_dark">#982C62</color>
-    <color name="edx_brand_secondary_base">#C2387D</color>
-    <color name="edx_brand_secondary_accent">#E09BBE</color>
-    <color name="edx_brand_secondary_back">#F3D7E5</color>
-    <color name="edx_brand_secondary_x_back">#FCF5F8</color>
+    <color name="edx_brand_primary_dark">#48321e</color>
+    <color name="edx_brand_primary_base">#7f5734</color>
+    <color name="edx_brand_primary_accent">#a77244</color>
+    <color name="edx_brand_primary_back">#cba380</color>
+    <color name="edx_brand_primary_x_back">#e9d8c9</color>
+
+    <color name="edx_brand_secondary_dark">#3d4125</color>
+    <color name="edx_brand_secondary_base">#6a7141</color>
+    <color name="edx_brand_secondary_accent">#98a25d</color>
+    <color name="edx_brand_secondary_back">#c0c79e</color>
+    <color name="edx_brand_secondary_x_back">#eaecdf</color>
+
     <color name="edx_brand_gray_dark">#111111</color>
     <color name="edx_brand_gray_base">#414141</color>
     <color name="edx_brand_gray_accent">#A0A0A0</color>
     <color name="edx_brand_gray_back">#D9D9D9</color>
     <color name="edx_brand_gray_x_back">#F5F5F5</color>
-    <color name="edx_success_text">#008100</color>
-    <color name="edx_success_accent">#009B00</color>
-    <color name="edx_success_back">#ECFAEC</color>
-    <color name="edx_error_text">#B20610</color>
-    <color name="edx_error_accent">#CB0712</color>
-    <color name="edx_error_back">#FEECED</color>
-    <color name="edx_warning_accent">#FFC01F</color>
-    <color name="edx_warning_back">#FFF9EB</color>
+
+    <color name="edx_success_text">#1E8142</color>
+    <color name="edx_success_accent">#25B85A</color>
+    <color name="edx_success_back">#6CCF90</color>
+
+    <color name="edx_error_text">#77040A</color>
+    <color name="edx_error_accent">#B20610</color>
+    <color name="edx_error_back">#CB585E</color>
+
+    <color name="edx_warning_accent">#FDBC56</color>
+    <color name="edx_warning_back">#FDD28D</color>
 </resources>
